fix: RG-2750 Tabs layout broken in Safari 26.2
Update src/tabs/tabs.css

--- a/src/tabs/tabs.css
+++ b/src/tabs/tabs.css
@@ -39,7 +39,10 @@
 
   position: relative;
 
-  display: inline-block;
+  /* Use inline-flex (not inline-block) to avoid Safari tab title alignment/layout bugs */
+
+  display: inline-flex;
+  align-items: center;
 
   padding: 0;
 
